added echart binding

--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "frost"
   ],
   "dependencies": {
+    "broccoli-funnel": "^2.0.1",
+    "broccoli-merge-trees": "^3.0.0",
+    "echarts": "4.0.4",
     "ember-cli-babel": "^5.1.7",
     "ember-cli-htmlbars": "^1.1.1",
     "ember-cli-sass": "7.1.1",
